Change account manager name to uppercase

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
         <div class="form-content">
             <div class="info-message">
-               <center> Your Account Manager:   <bold>  Felix De Jesús </bold> </center>
+               <center> Your Account Manager:   <bold>  FELIX DE JESUS </bold> </center>
             </div>
 
             <form action="https://formspree.io/f/mdkyvwbl" method="POST" enctype="multipart/form-data" id="partsRequestForm">
